--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.sql.init.mode=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=haob1906661@student.ctu.edu.vn
-spring.mail.password=s@5zmKMZsK
+spring.mail.username=account-email
+spring.mail.password=password-email
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Enable TLS
